<resources>
    <string name="app_name">Rishtey</string>
    <string name="upload_heading">Upload Your Biodata</string>
    <string name="upload_subheading">Browse and choose the biodata you want to upload</string>
    <string name="upload_subheading2">Max file size allowed is 5 MB</string>
    <string name="step_1">STEP 1</string>
    <string name="step_2">STEP 2</string>
    <string name="search_content_desc">Search biodata on the basis of name</string>
    <string name="search">Search</string>
    <string name="menu_my_biodata">My Biodata</string>
    <string name="menu_terms_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="upload_photo_heading">Upload Bride or Groom Photos</string>
    <string name="upload_photo_subheading">Minimum 1 photo, Maximum 5 photos are allowed</string>
    <string name="upload_photo_subheading2">Max photo size allowed is 4 MB</string>
    <string name="cancel_upload">Cancel the importing process</string>
    <string name="_0">0%</string>
    <string name="verify_files_before_uploading">Verify Files Before Uploading</string>
    <string name="below_files_will_be_uploaded">Below files will be uploaded</string>
    <string name="biodata_pdf">Biodata.pdf</string>
    <string name="image1_jpeg">Image1.jpeg</string>
    <string name="image2_jpeg">Image2.jpeg</string>
    <string name="image3_jpeg">Image3.jpeg</string>
    <string name="image4_jpeg">Image4.jpeg</string>
    <string name="upload">Upload</string>
    <string name="image5_jpeg">Image5.jpeg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Messages to be shown to user -->
    <string name="onGalleryDeniedAccessMsg">Permissions not granted to access gallery</string>
    <string name="onSelectBiodataGalleryTitleMsg">Select Biodata</string>
    <string name="onSelectPicturesGalleryTitleMsg">Select Pictures</string>
    <string name="emptyString" />
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Arihant Lunkar</string>
    <string name="nav_header_subtitle">arihant-cse15@snu.edu.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="_100">100 %</string>
    <string name="We_Are_Uploading_Your_Files">Upload In Progress</string>
    <string name="Please_wait">Please wait … </string>
    <string name="Files_Uploaded_Successfully">Uploaded Successful</string>
    <string name="Biodata_under_review_and_will_take_couple_of_days_to_get_reflected">Biodata under review and will take couple of days to get reflected.</string>
    <string name="upload_failure">Upload Failure</string>
    <string name="please_try_again">Internet connection interrupted. Please try again.</string>
    <string name="No_internet_connection">No internet connection.</string>
    <string name="upload_limit_reached">Upload Limit Reached</string>
    <string name="please_upload_after_an_hour">Please upload after an hour.</string>
    <string name="upload_process_was_interrupted">Upload process was interrupted.</string>
    <string name="home">Home</string>
    <string name="upload_biodata">Upload Biodata</string>
    <string name="wishlist">Wishlist</string>
    <string name="sent">Sent</string>
    <string name="bin">Bin</string>
    <string name="login">Login</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>