<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/ic_menu_sent_24"
            android:title="@string/sent" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_menu_favorite_24"
            android:title="@string/wishlist" />
        <item
            android:id="@+id/nav_bin"
            android:icon="@drawable/ic_menu_bin_24"
            android:title="@string/bin" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_menu_privacy_policy_24"
            android:title="@string/privacy_policy" />
    </group>
	<group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_menu_upload_24"
            android:title="@string/upload" />
		<item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>