<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload.UploadFragment">

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:backgroundTint="@color/background"-->
<!--        app:liftOnScroll="true">-->

<!--        <com.google.android.material.appbar.MaterialToolbar-->
<!--            android:id="@+id/topAppBar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="?attr/actionBarSize"-->
<!--            app:menu="@menu/top_app_bar_without_search" />-->

<!--    </com.google.android.material.appbar.AppBarLayout>-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".90" />

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/frame2"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        />

    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toRightOf="@+id/frame1"
        app:layout_constraintRight_toLeftOf="@+id/frame3"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        />

    <FrameLayout
        android:id="@+id/frame3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:!"
        app:layout_constraintLeft_toRightOf="@+id/frame2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <View
        android:id="@+id/OuterCircle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/outer_circle"
        app:layout_constraintBottom_toBottomOf="@+id/frame2"
        app:layout_constraintEnd_toEndOf="@+id/frame2"
        app:layout_constraintStart_toStartOf="@+id/frame2"
        app:layout_constraintTop_toTopOf="@+id/frame2" />

    <View
        android:id="@+id/dotTopCircle"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        app:layout_constraintBottom_toTopOf="@id/floatingActionButton"
        app:layout_constraintRight_toRightOf="@id/frame2"
        app:layout_constraintLeft_toLeftOf="@+id/frame2"
        app:layout_constraintTop_toTopOf="@+id/frame2" />

    <View
        android:id="@+id/dotLeftCircle"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        app:layout_constraintBottom_toBottomOf="@+id/frame2"
        app:layout_constraintRight_toLeftOf="@id/floatingActionButton"
        app:layout_constraintLeft_toLeftOf="@id/frame2"
        app:layout_constraintTop_toTopOf="@+id/frame2" />

    <View
        android:id="@+id/middleCircle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha=".50"
        android:background="@drawable/middle_circle"
        app:layout_constraintBottom_toBottomOf="@+id/dotBottomCircle"
        app:layout_constraintEnd_toEndOf="@+id/dotRightCircle"
        app:layout_constraintStart_toStartOf="@+id/dotLeftCircle"
        app:layout_constraintTop_toTopOf="@+id/dotTopCircle" />

    <View
        android:id="@+id/dotRightCircle"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        app:layout_constraintBottom_toBottomOf="@+id/frame2"
        app:layout_constraintRight_toRightOf="@id/frame2"
        app:layout_constraintLeft_toRightOf="@+id/floatingActionButton"
        app:layout_constraintTop_toTopOf="@+id/frame2" />

    <View
        android:id="@+id/dotBottomCircle"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        app:layout_constraintBottom_toBottomOf="@+id/frame2"
        app:layout_constraintRight_toRightOf="@id/frame2"
        app:layout_constraintLeft_toLeftOf="@+id/frame2"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@+id/frame2"
        app:layout_constraintEnd_toEndOf="@+id/frame2"
        app:layout_constraintStart_toStartOf="@+id/frame2"
        app:layout_constraintTop_toTopOf="@+id/frame2"
        app:rippleColor="@color/colorPrimary"
        app:srcCompat="@drawable/ic_baseline_cloud_upload_24"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/uploadHeading"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/metropolis_bold"
        android:gravity="center"
        android:text="@string/upload_heading"
        android:textColor="@color/colorPrimary"
        app:autoSizeMinTextSize="18sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OuterCircle" />

    <TextView
        android:id="@+id/uploadSubHeading"
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/metropolis_regular"
        android:gravity="center"
        android:text="@string/upload_subheading"
        android:textColor="@color/colorOnBackground"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uploadHeading" />

    <TextView
        android:id="@+id/uploadSubHeading2"
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/metropolis_semibold"
        android:gravity="center"
        android:text="@string/upload_subheading2"
        android:textColor="@color/colorOnSurface"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uploadSubHeading" />

    <View
        android:id="@+id/startDot"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/outer_circle"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/firstLine"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/firstLine"
        />

    <View
        android:id="@+id/firstLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@id/step1"
        app:layout_constraintStart_toEndOf="@id/startDot"
        app:layout_constraintTop_toTopOf="@id/step2"
        />

    <TextView
        android:id="@+id/step1"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/metropolis_bold"
        android:gravity="center"
        android:text="@string/step_1"
        android:textColor="@color/colorSecondaryVariant"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@id/middleLine"
        app:layout_constraintStart_toEndOf="@id/firstLine" />

    <View
        android:id="@+id/middleLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="@id/middleCircle"
        app:layout_constraintStart_toStartOf="@id/middleCircle"
        app:layout_constraintTop_toTopOf="@id/step2" />

    <TextView
        android:id="@+id/step2"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/metropolis_light"
        android:gravity="center"
        android:text="@string/step_2"
        android:textColor="@color/colorSecondaryVariant"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@id/lastLine"
        app:layout_constraintStart_toEndOf="@id/middleLine" />

    <View
        android:id="@+id/lastLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@id/lastDot"
        app:layout_constraintStart_toEndOf="@id/step2"
        app:layout_constraintTop_toTopOf="@id/step2" />

    <View
        android:id="@+id/lastDot"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/outer_circle"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toEndOf="@+id/lastLine"
        app:layout_constraintTop_toTopOf="@+id/lastLine" />

</androidx.constraintlayout.widget.ConstraintLayout>